Redoes some language

--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
 
         <!-- Bio text -->
         <p>
-          I study Computer Science @ Cal.  In my free time, I nerd out over tea, video games, and augmented reality.
-          I also have a slowly growing <a href="https://www.youtube.com/c/BryanTongC">YouTube channel</a> with some nerdy videos.
+          I studied Computer Science @ Cal.  In my free time, I nerd out over tea, video games, and augmented reality.
+          I also have a slowly growing <a href="https://www.youtube.com/c/BryanTongC">YouTube channel</a> with a few videos.
           <br />
         </p>
           Media Mentions: 
