--- a/projects/boredomsolver.html
+++ b/projects/boredomsolver.html
@@ -11,7 +11,7 @@
 	<meta property="og:title" content="Bryan Tong" />
 	<meta property="og:description" content="Homepage of Bryan Tong, Software Engineer." />
 	<meta property="og:image" content="http://btong.me/images/favicon.png" />
-	<link rel="shortcut icon" href="/images/favicon.png" type="image/png" />
+	<link rel="shortcut icon" href="..//images/favicon.png" type="image/png" />
 	<link rel="shortcut icon" href="http://btong.me/favicon.png" type="image/x-icon">
   <!-- Mobile Specific Metas -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -24,7 +24,7 @@
   <link rel="stylesheet" href="css/skeleton.css">
   <link rel="stylesheet" href="css/slider.css">
   <!-- Favicon -->
-  <link rel="icon" type="image/png" href="images/favicon.png">
+  <link rel="icon" type="image/png" href="../images/favicon.png">
   <!-- Google stuff -->
   <script src="/google_analytics_auto.js"></script>
 </head>
@@ -40,45 +40,24 @@
 
         <!-- Subheader text -->
         <p>
-          <!-- Figure out how to have the background change as I hover over links -->
-          <a href="cs184/final/index.html" onmouseover="hoverTool()" id="pc2m">Point Cloud to Mesh Converter</a> // <span>Computer Graphics</span>
-          <br />
+          A while back, I got bored and decided to create an Amazon Alexa skill.  It was mainly for the free 
+          Echo device at the time, but I was shocked to see quite a number of people were actually using it.
+        </p>
 
-          <a href="cs184/rasterizer/index.html" onmouseover="hoverTool()" id="imagerasterizer">Image Rasterizer</a> // <span>Computer Graphics</span>
-          <br />
-
-          <a href="cs184/pathtracer/index.html" onmouseover="hoverTool()" id="pathtracer">Path-Tracer &amp; Ray-Tracer</a> // <span>Computer Graphics</span>
-          <br />
-
-          <a href="cs184/materialrenderer/index.html" onmouseover="hoverTool()" id="materialrenderer">Material &amp; Lens Renderer</a> // <span>Computer Graphics</span>
-          <br />
-
-          <a href="cs184/clothsim/index.html" onmouseover="hoverTool()" id="clothsim">Cloth &amp; Fabric Simulator</a> // <span>Computer Graphics</span>
+        <p>
+          <a href="https://www.amazon.com/btong-me-Boredom-Solver/dp/B07482V679
+          ">Boredom Solver</a> is available on the Amazon store.
           <br />
         </p>
 
         <p>
-          <a href="projects/boredomsolver.html">Boredom Solver</a> // <span>Alexa Skill</span>
+          Below is a screencap some of the surprising metrics.
           <br />
+          <img src="images/boredomsolver.png" alt="Boredom Solver metrics" width="400px">
         </p>
-
-        <p>
-          <a href="#">Augmented Reality Textbooks</a> // <span>VR@B</span>
-          <br />
-        </p>
-
-        <p>
-          <a href="https://www.youtube.com/c/BryanTongC">YouTube Channel</a> // Media
-          <br />
-        </p>
-
-       <!--  <div id="sliding-div">
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-            <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).</p>
-        </div> -->
 
         <!-- Buttons! Yay buttons! -->
-        <a class="button" href="index.html">Homepage</a>
+        <a class="button" href="../projects.html">Go Back</a>
         <!-- <a href="#0" class="button js-cd-panel-trigger" data-panel="main">Contact</a> -->
       </div>
     </div>
@@ -152,7 +131,7 @@ function hoverTool() {
   }
 
   const phrases = [
-    'projects',
+    'boredom solver',
   ]
 
   const el = document.querySelector('.text');
