--- a/projects.html
+++ b/projects.html
@@ -37,35 +37,48 @@
         <h4>
           <div class="text"></div>
         </h4>
-
         <!-- Subheader text -->
         <p>
-          <!-- Figure out how to have the background change as I hover over links -->
-          <a href="cs184/final/index.html" onmouseover="hoverTool()" id="pc2m">Point Cloud to Mesh Converter</a> // <span>Computer Graphics</span>
-          <br />
+            // 2019 -
+            <br />
+            <a href="https://medium.com/p/8d9a418384a3/">Interaction &amp; Perception of Time</a> // <span>Virtual Reality // WIP</span>
+            <br />
+        </p>
+        <p>
+            // 2018 - 2019
+            <br />
+            <!-- Figure out how to have the background change as I hover over links -->
+            <a href="cs184/final/index.html" onmouseover="hoverTool()" id="pc2m">Point Cloud to Mesh Converter</a> // <span>Computer Graphics</span>
+            <br />
 
-          <a href="cs184/rasterizer/index.html" onmouseover="hoverTool()" id="imagerasterizer">Image Rasterizer</a> // <span>Computer Graphics</span>
-          <br />
+            <a href="cs184/rasterizer/index.html" onmouseover="hoverTool()" id="imagerasterizer">Image Rasterizer</a> // <span>Computer Graphics</span>
+            <br />
 
-          <a href="cs184/pathtracer/index.html" onmouseover="hoverTool()" id="pathtracer">Path-Tracer &amp; Ray-Tracer</a> // <span>Computer Graphics</span>
-          <br />
+            <a href="cs184/pathtracer/index.html" onmouseover="hoverTool()" id="pathtracer">Path-Tracer &amp; Ray-Tracer</a> // <span>Computer Graphics</span>
+            <br />
 
-          <a href="cs184/materialrenderer/index.html" onmouseover="hoverTool()" id="materialrenderer">Material &amp; Lens Renderer</a> // <span>Computer Graphics</span>
-          <br />
+            <a href="cs184/materialrenderer/index.html" onmouseover="hoverTool()" id="materialrenderer">Material &amp; Lens Renderer</a> // <span>Computer Graphics</span>
+            <br />
 
-          <a href="cs184/clothsim/index.html" onmouseover="hoverTool()" id="clothsim">Cloth &amp; Fabric Simulator</a> // <span>Computer Graphics</span>
-          <br />
+            <a href="cs184/clothsim/index.html" onmouseover="hoverTool()" id="clothsim">Cloth &amp; Fabric Simulator</a> // <span>Computer Graphics</span>
+            <br />
         </p>
 
         <p>
+            // 2017
+            <br />
+            <a href="#">Augmented Reality Textbooks</a> // <span>VR@B</span>
+            <br />
+          </p>
+
+        <p>
+            // 2016
+            <br />
           <a href="projects/boredomsolver.html">Boredom Solver</a> // <span>Alexa Skill</span>
           <br />
         </p>
 
-        <p>
-          <a href="#">Augmented Reality Textbooks</a> // <span>VR@B</span>
-          <br />
-        </p>
+       
 
         <p>
           <a href="https://www.youtube.com/c/BryanTongC">YouTube Channel</a> // Media
