Update for casemaps

--- a/projects.html
+++ b/projects.html
@@ -43,6 +43,8 @@
             <br />
             <a href="https://medium.com/p/8d9a418384a3/">Interaction &amp; Perception of Time</a> // <span>Virtual Reality // WIP</span>
             <br />
+	    <a href="casemaps.io">Mapping Infectious / Bacterial Outbreaks</a> // <span>Freelance</span>
+	    <br />
         </p>
         <p>
             // 2018 - 2019
