--- a/index.html
+++ b/index.html
@@ -26,7 +26,14 @@
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="images/favicon.png">
   <!-- Google stuff -->
-  <script src="/google_analytics_auto.js"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-73463502-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-73463502-1');
+  </script>
 </head>
 
 <body>
