--- a/projects.html
+++ b/projects.html
@@ -46,15 +46,20 @@
         </h4>
         <!-- Subheader text -->
         <p>
-            // 2019 -
+            // 2019 - WIP
             <br />
-            <a href="https://medium.com/p/8d9a418384a3/">Interaction &amp; Perception of Time</a> // <span>Virtual Reality // WIP</span>
+            <a href="https://medium.com/p/8d9a418384a3/">Interaction &amp; Perception of Time</a> // <span>Virtual Reality</span>
             <br />
-	    <a href="casemaps.io">Mapping Infectious / Bacterial Outbreaks</a> // <span>Freelance</span>
-	    <br />
+	          <a href="casemaps.io">Mapping Infectious / Bacterial Outbreaks</a> // <span>Freelance</span>
+	      <br />
         </p>
         <p>
             // 2018 - 2019
+            <br />
+            <a href="http://rll.berkeley.edu/blue/" onmouseover="hoverTool()" id="blue">Robotic Arm Tele-Operation with Blue</a> // <span>Robotics, HCI</span>
+            <br />
+            ↳ <a href="/projects/blue-vive.mp4">Video Demonstration</a>, <a href="https://spectrum.ieee.org/automaton/robotics/industrial-robots/uc-berkeley-blue-low-cost-force-controlled-robot-arm">News Article (IEEE)</a>
+
             <br />
             <!-- Figure out how to have the background change as I hover over links -->
             <a href="cs184/final/index.html" onmouseover="hoverTool()" id="pc2m">Point Cloud to Mesh Converter</a> // <span>Computer Graphics</span>
@@ -76,7 +81,7 @@
         <p>
             // 2017
             <br />
-            <a href="#">Augmented Reality Textbooks</a> // <span>VR@B</span>
+            <a href="https://github.com/vrab/AR-Textbooks">Augmented Reality Textbooks</a> // <span>VR@B</span>
             <br />
           </p>
 
