Update for Feb 2020

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- Fonts -->
   <link href="//fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
+  <link href="https://fonts.googleapis.com/css?family=Nunito:700&display=swap" rel="stylesheet">
   <!-- jQuery -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <!-- CSS  -->
@@ -40,14 +41,17 @@
   <!-- Primary Page Layout -->
   <div class="container">
     <div class="row">
-      <div class="one-half column" style="margin-top: 25%">
+      <div class="one-half column" style="margin-top: 20%">
         <h4>
           <div class="text"></div>
         </h4>
 
         <!-- Subheader text -->
         <p>
-          Software Engineer @ <span class="pivotal">Pivotal</span>
+          Software Engineer @ <span class="unicorn">some unicorn</span>
+        </p>
+        <p>
+          Ex-<span class="vmw">VMware</span>, Ex-<span class="pivotal">Pivotal</span>
           <br />
           Former Co-Instructor of <a href="https://inst.eecs.berkeley.edu/~cs370"><strong><font color="navyblue">CS</font></strong><font color="orange">370</font></a>, 
           Former President of <a href="https://vr.berkeley.edu/"><font color="lightskyblue">VR@B</font></a>
@@ -55,7 +59,8 @@
 
         <!-- Bio text -->
         <p>
-          I studied Computer Science @ Cal.  In my free time, I nerd out over tea, video games, and augmented reality.
+          I studied Computer Science @ Cal.  In my free time, I nerd out over tea, video games, and EDM.
+          My current tech interests include AR/VR, robotics, meshnets, and futurism.
           I also have a slowly growing <a href="https://www.youtube.com/c/BryanTongC">YouTube channel</a> with a few videos.
           <br />
         </p>
