--- a/blog.html
+++ b/blog.html
@@ -46,63 +46,10 @@
         </h4>
         <!-- Subheader text -->
         <p>
-            // 2019 - WIP
+            <a href="blog/netflixs-chaos-monkey.html">Netflix's Chaos Monkey</a>
             <br />
-            <a href="https://medium.com/p/8d9a418384a3/">Interaction &amp; Perception of Time</a> // <span>Virtual Reality</span>
-            <br />
-	          <a href="casemaps.io">Mapping Infectious / Bacterial Outbreaks</a> // <span>Freelance</span>
-	      <br />
+            ↳ &#128197; 2/10/2021 &#9997; tech, software, distributed systems</a>
         </p>
-        <p>
-            // 2018 - 2019
-            <br />
-            <a href="http://rll.berkeley.edu/blue/" onmouseover="hoverTool()" id="blue">Robotic Arm Tele-Operation with Blue</a> // <span>Robotics, HCI</span>
-            <br />
-            ↳ <a href="/projects/blue-vive.mp4">Video Demonstration</a>, <a href="https://spectrum.ieee.org/automaton/robotics/industrial-robots/uc-berkeley-blue-low-cost-force-controlled-robot-arm">News Article (IEEE)</a>
-
-            <br />
-            <!-- Figure out how to have the background change as I hover over links -->
-            <a href="cs184/final/index.html" onmouseover="hoverTool()" id="pc2m">Point Cloud to Mesh Converter</a> // <span>Computer Graphics</span>
-            <br />
-
-            <a href="cs184/rasterizer/index.html" onmouseover="hoverTool()" id="imagerasterizer">Image Rasterizer</a> // <span>Computer Graphics</span>
-            <br />
-
-            <a href="cs184/pathtracer/index.html" onmouseover="hoverTool()" id="pathtracer">Path-Tracer &amp; Ray-Tracer</a> // <span>Computer Graphics</span>
-            <br />
-
-            <a href="cs184/materialrenderer/index.html" onmouseover="hoverTool()" id="materialrenderer">Material &amp; Lens Renderer</a> // <span>Computer Graphics</span>
-            <br />
-
-            <a href="cs184/clothsim/index.html" onmouseover="hoverTool()" id="clothsim">Cloth &amp; Fabric Simulator</a> // <span>Computer Graphics</span>
-            <br />
-        </p>
-
-        <p>
-            // 2017
-            <br />
-            <a href="https://github.com/vrab/AR-Textbooks">Augmented Reality Textbooks</a> // <span>VR@B</span>
-            <br />
-          </p>
-
-        <p>
-            // 2016
-            <br />
-          <a href="projects/boredomsolver.html">Boredom Solver</a> // <span>Alexa Skill</span>
-          <br />
-        </p>
-
-       
-
-        <p>
-          <a href="https://www.youtube.com/c/BryanTongC">YouTube Channel</a> // Media
-          <br />
-        </p>
-
-       <!--  <div id="sliding-div">
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-            <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).</p>
-        </div> -->
 
         <!-- Buttons! Yay buttons! -->
         <a class="button" href="index.html">Back to Home</a>
@@ -115,15 +62,6 @@
 </body>
 
 <script>
-// BEGIN PROJECTS HOVER TOOL
-function hoverTool() {
-  document.getElementById("demo").innerHTML
-}
-
-
-
-// END PROJECTS HOVER TOOL
-
 // BEGIN H4 TEXT SCRAMBLER (s/o to CodePen, https://codepen.io/khalilliu/pen/RKvZKX)
   class TextScramble {
     constructor(el) {
@@ -179,7 +117,7 @@ function hoverTool() {
   }
 
   const phrases = [
-    'projects',
+    'blog',
   ]
 
   const el = document.querySelector('.text');
