--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         </p>
 
         <!-- Buttons! Yay buttons! -->
-        <a class="button" href="blog.html">Blog</a>
+        <a class="button" href="blog.html">Digital Garden</a>
         <a class="button" href="projects.html">Projects</a>
         <a class="button" href="/resume.pdf">Resume</a>
       </div>
