--- a/projects.html
+++ b/projects.html
@@ -38,7 +38,7 @@
 
 <body>
   <!-- Primary Page Layout -->
-  <div class="container" style="padding: 0 0 100px 0">
+  <div class="container">
     <div class="row">
       <div class="one-half column" style="margin-top: 20%">
         <h4>
