--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
 
         <!-- Subheader text -->
         <p>
-          Software Engineer @ <span class="unicorn">some unicorn</span>
+          Software Engineer @ <span class="unicorn">Big Tech</span>
         </p>
         <p>
-          Ex-<span class="vmw">VMware</span>, Ex-<span class="pivotal">Pivotal</span>
+          Ex-<span class="vmw">Anduril</span>, Ex-<span class="pivotal">Pivotal</span>
           <br />
           Former Co-Instructor of <a href="https://inst.eecs.berkeley.edu/~cs370"><strong><font color="navyblue">CS</font></strong><font color="orange">370</font></a>, 
           Former President of <a href="https://vr.berkeley.edu/"><font color="lightskyblue">VR@B</font></a>
@@ -59,9 +59,10 @@
 
         <!-- Bio text -->
         <p>
-          I studied Computer Science @ Cal.  In my free time, I nerd out over tea, video games, and EDM.
-          My current tech interests include AR/VR, robotics, meshnets, and futurism.
-          I also have a slowly growing <a href="https://www.youtube.com/c/BryanTongC">YouTube channel</a> with a few videos.
+          I studied Computer Science and Cognitive Science @ Cal.
+	  In my free time, I enjoy coffee, competitive gaming, and fiddling with hardware (keyboards, cameras, PCs).
+          My current professional interests include open-source software, distributed systems, and MBMI futurism.
+          I also have a slowly growing <a href="https://www.youtube.com/c/BryanTongC">YouTube channel</a> with a few videos!
           <br />
         </p>
           Media Mentions: 
@@ -73,7 +74,7 @@
         </p>
 
         <!-- Buttons! Yay buttons! -->
-        <a class="button" href="blog.html">Digital Garden</a>
+        <a class="button" href="blog.html">Blog</a>
         <a class="button" href="projects.html">Projects</a>
         <a class="button" href="/resume.pdf">Resume</a>
       </div>
