--- a/blog.html
+++ b/blog.html
@@ -45,6 +45,11 @@
           <div class="text"></div>
         </h4>
         <!-- Subheader text -->
+	<p>
+            <a href="blog/actually-sustainable-food.html">Actually Sustainable Food</a>
+            <br />
+            ↳ &#128197; 11/10/2021 &#9997; thoughts, food, futurism</a>
+        </p>
         <p>
             <a href="blog/netflixs-chaos-monkey.html">Netflix's Chaos Monkey</a>
             <br />
