--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
   <!-- Basic Page Needs -->
   <meta charset="utf-8">
   <title>Bryan Tong {bt}</title>
-  <meta name="description" content="Homepage of Bryan Tong, software engineer and futurism enthusiast.">
+  <meta name="description" content="btong.me - Homepage of Bryan Tong, software engineer and futurism enthusiast.">
   <meta name="author" content="Bryan Tong">
   <meta name="keywords" content="Bryan Tong" />
   <meta property="og:type" content="website" />
 	<meta property="og:title" content="Bryan Tong" />
-	<meta property="og:description" content="Homepage of Bryan Tong, software engineer and futurism enthusiast." />
+	<meta property="og:description" content="btong.me - Homepage of Bryan Tong, software engineer and futurism enthusiast." />
 	<meta property="og:image" content="http://btong.me/images/favicon.png" />
 	<link rel="shortcut icon" href="/images/favicon.png" type="image/png" />
 	<link rel="shortcut icon" href="http://btong.me/favicon.png" type="image/x-icon">
@@ -59,7 +59,7 @@
 
         <!-- Bio text -->
         <p>
-          I studied Computer Science and Cognitive Science @ Cal.
+          I studied Computer Science (and some neuroscience) @ Cal.
 	  In my free time, I enjoy coffee, competitive gaming, and fiddling with hardware (keyboards, cameras, PCs).
           My current professional interests include open-source software, distributed systems, and MBMI futurism.
           I also have a slowly growing <a href="https://www.youtube.com/c/BryanTongC">YouTube channel</a> with a few videos!
